@@ -9,6 +9,7 @@ import org.jsoup.helper.HttpConnection;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 
 /**
@@ -64,7 +65,7 @@ public class Jsoup {
      @param in          file to load HTML from
      @param charsetName (optional) character set of file contents. Set to {@code null} to determine from {@code http-equiv} meta tag, if
      present, or fall back to {@code UTF-8} (which is often safe to do).
-     @param baseUri     The URL where the HTML was retrieved from, to generate absolute URLs relative to.
+     @param baseUri     The URL where the HTML was retrieved from, to resolve relative links against.
      @return sane HTML
 
      @throws IOException if the file could not be found, or read, or if the charsetName is invalid.
@@ -86,6 +87,21 @@ public class Jsoup {
      */
     public static Document parse(File in, String charsetName) throws IOException {
         return DataUtil.load(in, charsetName, in.getAbsolutePath());
+    }
+
+     /**
+     Read an input stream, and parse it to a Document.
+
+     @param in          input stream to read. Make sure to close it after parsing.
+     @param charsetName (optional) character set of file contents. Set to {@code null} to determine from {@code http-equiv} meta tag, if
+     present, or fall back to {@code UTF-8} (which is often safe to do).
+     @param baseUri     The URL where the HTML was retrieved from, to resolve relative links against.
+     @return sane HTML
+
+     @throws IOException if the file could not be found, or read, or if the charsetName is invalid.
+     */
+    public static Document parse(InputStream in, String charsetName, String baseUri) throws IOException {
+        return DataUtil.load(in, charsetName, baseUri);
     }
 
     /**
