@@ -1,5 +1,7 @@
 jsoup changelog
 
+ * Added ability to load and parse HTML from an input stream.
+
  * Relaxed parse rules of H1 - H6, to allow nested content. This is against spec, but matches browser and publisher
    behaviour.
 
